--- a/03_notebooks/01_data_exploration.ipynb
+++ b/03_notebooks/01_data_exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "80a0d767",
    "metadata": {},
    "outputs": [
@@ -162,7 +162,7 @@
        "4      2023-03-09             9      1118.56              True      Active  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "id": "4eec3b22",
    "metadata": {},
    "outputs": [
@@ -186,16 +186,27 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 3000 entries, 0 to 2999\n",
-      "Data columns (total 4 columns):\n",
-      " #   Column       Non-Null Count  Dtype \n",
-      "---  ------       --------------  ----- \n",
-      " 0   order_id     3000 non-null   int64 \n",
-      " 1   customer_id  3000 non-null   int64 \n",
-      " 2   order_date   3000 non-null   object\n",
-      " 3   status       3000 non-null   object\n",
-      "dtypes: int64(2), object(2)\n",
-      "memory usage: 93.9+ KB\n"
+      "RangeIndex: 75 entries, 0 to 74\n",
+      "Data columns (total 15 columns):\n",
+      " #   Column            Non-Null Count  Dtype  \n",
+      "---  ------            --------------  -----  \n",
+      " 0   customer_id       75 non-null     int64  \n",
+      " 1   first_name        75 non-null     object \n",
+      " 2   last_name         75 non-null     object \n",
+      " 3   email             75 non-null     object \n",
+      " 4   phone             75 non-null     object \n",
+      " 5   city              75 non-null     object \n",
+      " 6   state             75 non-null     object \n",
+      " 7   postal_code       75 non-null     int64  \n",
+      " 8   country           75 non-null     object \n",
+      " 9   signup_date       75 non-null     object \n",
+      " 10  last_order_date   67 non-null     object \n",
+      " 11  total_orders      75 non-null     int64  \n",
+      " 12  total_spent       75 non-null     float64\n",
+      " 13  marketing_opt_in  75 non-null     bool   \n",
+      " 14  segment           75 non-null     object \n",
+      "dtypes: bool(1), float64(1), int64(3), object(10)\n",
+      "memory usage: 8.4+ KB\n"
      ]
     }
    ],
@@ -205,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "bc9037a7",
    "metadata": {},
    "outputs": [
@@ -215,7 +226,7 @@
        "75"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,51 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "8fa9d325",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 120 entries, 0 to 119\n",
-      "Data columns (total 4 columns):\n",
-      " #   Column             Non-Null Count  Dtype \n",
-      "---  ------             --------------  ----- \n",
-      " 0   product_id         120 non-null    int64 \n",
-      " 1   on_hand            120 non-null    int64 \n",
-      " 2   reorder_point      120 non-null    int64 \n",
-      " 3   last_restock_date  120 non-null    object\n",
-      "dtypes: int64(3), object(1)\n",
-      "memory usage: 3.9+ KB\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "product_id           0\n",
-       "on_hand              0\n",
-       "reorder_point        0\n",
-       "last_restock_date    0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "inventory.head()\n",
-    "inventory.info()\n",
-    "inventory.isna().sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "12b15cbd",
    "metadata": {},
    "outputs": [
@@ -356,7 +323,7 @@
        "4           5      185             32        2025-06-18"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +338,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
+   "id": "e1468765",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 120 entries, 0 to 119\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column             Non-Null Count  Dtype \n",
+      "---  ------             --------------  ----- \n",
+      " 0   product_id         120 non-null    int64 \n",
+      " 1   on_hand            120 non-null    int64 \n",
+      " 2   reorder_point      120 non-null    int64 \n",
+      " 3   last_restock_date  120 non-null    object\n",
+      "dtypes: int64(3), object(1)\n",
+      "memory usage: 3.9+ KB\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "product_id           0\n",
+       "on_hand              0\n",
+       "reorder_point        0\n",
+       "last_restock_date    0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inventory.head()\n",
+    "inventory.info()\n",
+    "inventory.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "0c0a7fa8",
    "metadata": {},
    "outputs": [
@@ -457,7 +468,7 @@
        "4         1          75         4       66.25      0.15"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,7 +483,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
+   "id": "2744c26f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 9127 entries, 0 to 9126\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column      Non-Null Count  Dtype  \n",
+      "---  ------      --------------  -----  \n",
+      " 0   order_id    9127 non-null   int64  \n",
+      " 1   product_id  9127 non-null   int64  \n",
+      " 2   quantity    9127 non-null   int64  \n",
+      " 3   unit_price  9127 non-null   float64\n",
+      " 4   discount    9127 non-null   float64\n",
+      "dtypes: float64(2), int64(3)\n",
+      "memory usage: 356.7 KB\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "order_id      0\n",
+       "product_id    0\n",
+       "quantity      0\n",
+       "unit_price    0\n",
+       "discount      0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "order_items.head()\n",
+    "order_items.info()\n",
+    "order_items.isna().sum()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "f1869b33",
    "metadata": {},
    "outputs": [
@@ -552,7 +609,7 @@
        "4         5          447  2025-03-08 20:30:00  delivered"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,7 +624,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
+   "id": "90eba053",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 3000 entries, 0 to 2999\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column       Non-Null Count  Dtype \n",
+      "---  ------       --------------  ----- \n",
+      " 0   order_id     3000 non-null   int64 \n",
+      " 1   customer_id  3000 non-null   int64 \n",
+      " 2   order_date   3000 non-null   object\n",
+      " 3   status       3000 non-null   object\n",
+      "dtypes: int64(2), object(2)\n",
+      "memory usage: 93.9+ KB\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "order_id       0\n",
+       "customer_id    0\n",
+       "order_date     0\n",
+       "status         0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "orders.head()\n",
+    "orders.info()\n",
+    "orders.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "6c540579",
    "metadata": {},
    "outputs": [
@@ -647,7 +748,7 @@
        "4           5       Sports Item 5       Sports      210.97"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -662,7 +763,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
+   "id": "456bbb39",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 120 entries, 0 to 119\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column        Non-Null Count  Dtype  \n",
+      "---  ------        --------------  -----  \n",
+      " 0   product_id    120 non-null    int64  \n",
+      " 1   product_name  120 non-null    object \n",
+      " 2   category      120 non-null    object \n",
+      " 3   unit_price    120 non-null    float64\n",
+      "dtypes: float64(1), int64(1), object(2)\n",
+      "memory usage: 3.9+ KB\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "product_id      0\n",
+       "product_name    0\n",
+       "category        0\n",
+       "unit_price      0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "products.head()\n",
+    "products.info()\n",
+    "products.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "bd0c3b33",
    "metadata": {},
    "outputs": [
@@ -754,7 +899,7 @@
        "4          5        20         106  2025-05-28        Damaged          42.22"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -769,7 +914,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
+   "id": "1d0f6121",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 371 entries, 0 to 370\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column         Non-Null Count  Dtype  \n",
+      "---  ------         --------------  -----  \n",
+      " 0   return_id      371 non-null    int64  \n",
+      " 1   order_id       371 non-null    int64  \n",
+      " 2   product_id     371 non-null    int64  \n",
+      " 3   return_date    371 non-null    object \n",
+      " 4   reason         371 non-null    object \n",
+      " 5   refund_amount  371 non-null    float64\n",
+      "dtypes: float64(1), int64(3), object(2)\n",
+      "memory usage: 17.5+ KB\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "return_id        0\n",
+       "order_id         0\n",
+       "product_id       0\n",
+       "return_date      0\n",
+       "reason           0\n",
+       "refund_amount    0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "returns.head()\n",
+    "returns.info()\n",
+    "returns.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "59adca01",
    "metadata": {},
    "outputs": [
@@ -868,7 +1061,7 @@
        "4  2025-05-14 11:15:00  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -879,6 +1072,54 @@
     "shipments = pd.read_csv(\"../01_ecommerce_ops_analytics/data/raw/shipments.csv\")\n",
     "\n",
     "shipments.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "ccf99025",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 2549 entries, 0 to 2548\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column          Non-Null Count  Dtype \n",
+      "---  ------          --------------  ----- \n",
+      " 0   shipment_id     2549 non-null   int64 \n",
+      " 1   order_id        2549 non-null   int64 \n",
+      " 2   warehouse       2549 non-null   object\n",
+      " 3   carrier         2549 non-null   object\n",
+      " 4   shipped_date    2549 non-null   object\n",
+      " 5   delivered_date  2093 non-null   object\n",
+      "dtypes: int64(2), object(4)\n",
+      "memory usage: 119.6+ KB\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "shipment_id         0\n",
+       "order_id            0\n",
+       "warehouse           0\n",
+       "carrier             0\n",
+       "shipped_date        0\n",
+       "delivered_date    456\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "shipments.head()\n",
+    "shipments.info()\n",
+    "shipments.isna().sum()"
    ]
   }
  ],
